Fix DM bg color in dark mode

--- a/service.css
+++ b/service.css
@@ -3,3 +3,7 @@
     height: 100% !important;
     top: 0 !important;
 }
+
+#react-root {
+    background-color: white;
+}
